Closed Bug 1668052 Opened 4 years ago Closed 4 years ago

Pass the BrowserParent's browsing context to UpdateSessionStore instead of getting it from the frame element's frameloader.

Categories

(Firefox :: Session Restore, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Fission Milestone M6b
Tracking Status
firefox83 --- fixed

People

(Reporter: peterv, Assigned: peterv)

References

Details

(Whiteboard: waiting to also re-enable some tests)

Attachments

(1 file)

No description provided.
Severity: -- → S3
Fission Milestone: --- → M6b
Priority: -- → P2

Also fixes browser/components/sessionstore/test/browser_394759_behavior.js and browser/base/content/test/tabs/browser_bug580956.js

See Also: → 1667188
Attachment #9178494 - Attachment description: Bug 1668052 - Pass the BrowserParent's browsing context to UpdateSessionStore instead of getting it from the frame element's frameloader. → Bug 1668052 - Pass the BrowserParent's browsing context to UpdateSessionStore instead of getting it from the frame element's frameloader. r?nika!
Whiteboard: ready to land
Whiteboard: ready to land → waiting to also re-enable some tests
Pushed by pvanderbeken@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d015d2ae04ba
Pass the BrowserParent's browsing context to UpdateSessionStore instead of getting it from the frame element's frameloader. r=nika
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: