Bug 1668052 - Pass the BrowserParent's browsing context to UpdateSessionStore instead of getting it from the frame element's frameloader. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D91766